# netflix-clone

./: .env.example  README.md  SETUP.md  pyproject.toml  schema.yml
custom_commands/management/commands/: add_model.py  seed_data.py  setup_crud_view.py
finance/: models.py  seeders.py
finance/migrations/: 0001_initial.py  0002_initial.py
finance/serializers/: payment_mode_serializer.py  subscription_serializer.py
finance/views/: payment_mode_view.py  subscription_view.py
movies/: models.py  signals.py
movies/migrations/: 0001_initial.py  0002_initial.py  0002_review_content.py
movies/serializers/: genre_serializer.py  movie_review_serializer.py  movie_serializer.py
movies/services/: file_management_service.py
movies/views/: genre_view.py  movie_review_view.py  movie_view.py
project/: asgi.py  urls.py  wsgi.py
project/settings/: dev.py  local.py  production.py  qa.py
users/: authentication.py  models.py  seeders.py  signals.py
users/migrations/: 0001_initial.py  0002_expiringtoken.py
users/serializers/: login_serializer.py  user_serializer.py
users/templates/users/: registration_successful.html
users/views/: authentication_view.py  registration_view.py  user_view.py
